@startuml Expense
class Expense {
    + name: string 
    + description: string 
    + year: number
    + amount: number
    + type: ExpenseType
    + supplier_id: SupplierId
    + purchaseRequest: string
    + purchaseOrder: string
    + team_id: TeamId
    + change()
    + addSupplier()
    + updateSupplier()
    + addPurchaseRequest()
    + updatePurchaseRequest()
    + addPurchaseOrder()
    + updatePurchaseOrder()
    + addPurchaseDocs()
}
enum ExpenseType {
    CAPEX
    OPEX
}
abstract class Payment {
    + month: Month
    + amount: Amount
}

class PaymentPlanned {

}

class PaymentActual {
  + accoutingDate: Date
  + invoice: string
}

PaymentPlanned <|-- Payment
PaymentActual <|-- Payment

Expense *-- PaymentPlanned
Expense *-- PaymentActual

class TeamMember {
    + name: TeamMemberName
}

class Team { 
    + name: string
}

class Role { 
    + name: string
}

TeamMember "0..*" -- "1..*" Team
(TeamMember, Team) . Role



@enduml
